# Multi-Kinect-Syncronizer

./: .gitignore  CMakeLists.txt  readme.txt
include/multiGrabManager/: camera.h  labeledCloud.h  multiGrabManager.h  synchronizer.h
src/examples/: multipleKinect.cpp  principleDemo.cpp  simpleDemo.cpp
src/multiGrabManager/: camera.cpp  labeledCloud.cpp  multiGrabManager.cpp  synchronizer.cpp
test/: multiCameraViewer.cpp  singleCameraViewer.cpp
